# CASLoginAndroid

./: .gitignore  gradle.properties  installation.md  project-notes.md
app/: build.gradle
app/src/androidTest/java/com/example/caslogin/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  http-lib.cpp  native-lib.cpp
app/src/main/java/com/example/caslogin/: App.java
app/src/main/java/com/example/caslogin/data/: CASLogin.java  CASLoginException.java  LoginDataSource.java  LoginRepository.java  Result.java
app/src/main/java/com/example/caslogin/data/model/: LoggedInUser.java
app/src/main/java/com/example/caslogin/data/utils/: HttpClient.java  HttpConstants.java  RegexUtil.java  TLSSocketFactory.java
app/src/main/java/com/example/caslogin/data/utils/exceptions/: HttpClientException.java  URLEncodingException.java  UnexpectedHTTPStatusCode.java
app/src/main/java/com/example/caslogin/data/utils/httpclient/: HttpClient.java  HttpClientFactory.java  HttpConstants.java  HttpUtils.java
app/src/main/java/com/example/caslogin/data/utils/httpclient/curl/: CurlHttpClient.java
app/src/main/java/com/example/caslogin/data/utils/httpclient/java/: HttpConstants.java  JavaHttpClient.java  NativeHttpClient.java  TLSSocketFactory.java
app/src/main/java/com/example/caslogin/ui/login/: LoggedInUserView.java  LoginActivity.java  LoginFormState.java  LoginResult.java  LoginViewModel.java  LoginViewModelFactory.java
app/src/main/res/layout/: activity_login.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/caslogin/: ExampleUnitTest.java
gen-libs/: build-all.sh  build-curl.sh  build-openssl.sh  config-vars.sh  download-libs.sh
gradle/wrapper/: gradle-wrapper.properties
